Multires: normals not updating when using smooth shading #62282

Closed
opened 2019-03-06 21:30:41 +01:00 by Enrique Barranco · 38 comments

System Information
Operating system: Linux
Graphics card: Nvidia GeForce GTX 1050 Ti

Blender Version
Broken:
March 06, 14:18:14 - 3fc7d51ed3d3Beta

Worked:

Short description of error

Smooth Shading in sculpting mode does not update correctly when you deactivate Overlays.

Exact steps for others to reproduce the error

  1. Open Blender.
  2. Right click on cube shade smooth.
  3. Change to sculpt Mode.
  4. Use Mutires modifier.
  5. Deactivate Overlays.
  6. Try to sculpt

You can watch the behavior here.

**System Information** Operating system: Linux Graphics card: Nvidia GeForce GTX 1050 Ti **Blender Version** Broken: March 06, 14:18:14 - 3fc7d51ed3d3Beta Worked: **Short description of error** Smooth Shading in sculpting mode does not update correctly when you deactivate Overlays. **Exact steps for others to reproduce the error** 1. Open Blender. 2. Right click on cube shade smooth. 3. Change to sculpt Mode. 4. Use Mutires modifier. 5. Deactivate Overlays. 6. Try to sculpt [You can watch the behavior here. ](https://youtu.be/LAcCimLGIUs)

Added subscriber: @ebarranco

Added subscriber: @ebarranco

#64340 was marked as duplicate of this issue

#64340 was marked as duplicate of this issue

#64778 was marked as duplicate of this issue

#64778 was marked as duplicate of this issue

#64586 was marked as duplicate of this issue

#64586 was marked as duplicate of this issue

#64353 was marked as duplicate of this issue

#64353 was marked as duplicate of this issue

#64286 was marked as duplicate of this issue

#64286 was marked as duplicate of this issue

#64227 was marked as duplicate of this issue

#64227 was marked as duplicate of this issue

#63461 was marked as duplicate of this issue

#63461 was marked as duplicate of this issue

#62291 was marked as duplicate of this issue

#62291 was marked as duplicate of this issue

#62292 was marked as duplicate of this issue

#62292 was marked as duplicate of this issue

#62290 was marked as duplicate of this issue

#62290 was marked as duplicate of this issue
Sergey Sharybin was assigned by Sebastian Parborg 2019-03-07 11:15:45 +01:00
Sergey Sharybin removed their assignment 2019-03-07 11:25:42 +01:00
Clément Foucault was assigned by Sergey Sharybin 2019-03-07 11:25:42 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Overlays is not something i can control from sculpt/multires.

Overlays is not something i can control from sculpt/multires.

Added subscriber: @gentleclockdivider

Added subscriber: @gentleclockdivider

It looks like normals are not being recalculated for some reason.

It looks like normals are not being recalculated for some reason.
Clément Foucault was unassigned by Brecht Van Lommel 2019-03-26 13:35:44 +01:00
Jeroen Bakker was assigned by Brecht Van Lommel 2019-03-26 13:35:44 +01:00

Added subscriber: @fclem

Added subscriber: @fclem

Added subscriber: @moisessalvador

Added subscriber: @moisessalvador

Added subscribers: @BacMan12, @ZedDB

Added subscribers: @BacMan12, @ZedDB

Now it doesn't work with smooth shading (overlays doesn't seem to matter anymore).

Now it doesn't work with smooth shading (overlays doesn't seem to matter anymore).

Added subscriber: @hirvijk

Added subscriber: @hirvijk

Hello, for some reason with a more complex scene the bug behavior changes, now it computes after strokes end, with an addition now I can't undo strokes, it will only undo to the first sculpt stroke, not to the previous stroke.

dd9cebeb08f1ad4120b59855e93258e3.mp4

here is the file with more complex scene.
multires_bug.blend

Hello, for some reason with a more complex scene the bug behavior changes, now it computes after strokes end, with an addition now I can't undo strokes, it will only undo to the first sculpt stroke, not to the previous stroke. [dd9cebeb08f1ad4120b59855e93258e3.mp4](https://archive.blender.org/developer/F7015456/dd9cebeb08f1ad4120b59855e93258e3.mp4) here is the file with more complex scene. [multires_bug.blend](https://archive.blender.org/developer/F7015434/multires_bug.blend)

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero
Jeroen Bakker changed title from Smooth Shading in sculpting mode does not update correctly when deactivate Overlays. to Smooth Shading Not Updating When Using MultiRes Sculpting 2019-05-15 10:20:42 +02:00

Added subscriber: @JorgeBouza

Added subscriber: @JorgeBouza

Added subscriber: @AlexanderKrause

Added subscriber: @AlexanderKrause

I just realized that I reported something very similar here: #64586
Although, it happens independent from the overlays to me.

Another report about this can also be found here: #64778

The last version of 2.8 where the normal updates for multires still worked at all was: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-03 21:09, hash: ee0d8426ab

This is too bad because it makes sculpting somewhat unusable in 2.8.

The normal update also occurs when simply leaving sculpt-mode by going back to object-mode or when changing anything in the object geometry-data.

I just realized that I reported something very similar here: [#64586 ](https://developer.blender.org/T64586) Although, it happens independent from the overlays to me. Another report about this can also be found here: [#64778 ](https://developer.blender.org/T64778) The last version of 2.8 where the normal updates for multires still worked at all was: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-03 21:09, hash: ee0d8426ab This is too bad because it makes sculpting somewhat unusable in 2.8. The normal update also occurs when simply leaving sculpt-mode by going back to object-mode or when changing anything in the object geometry-data.

Added subscriber: @seaside98-4

Added subscriber: @seaside98-4

Added subscriber: @ncuxonaTZopa

Added subscriber: @ncuxonaTZopa

Added subscriber: @brecht

Added subscriber: @brecht

Marking as high priority given the number of reports.

Marking as high priority given the number of reports.
Brecht Van Lommel changed title from Smooth Shading Not Updating When Using MultiRes Sculpting to Multires: normals not updating when using smooth shading 2019-05-29 14:35:53 +02:00

Added subscribers: @tibor81, @RavenMask, @TomyB

Added subscribers: @tibor81, @RavenMask, @TomyB

Added subscriber: @ajlanaltug

Added subscriber: @ajlanaltug
Member

One of the next commits is the source of the issue.

b2f1a65874 (Skipped due to compile error)
fb3b2ab709 (Skipped due to compile error)
f302224e16 (First compilable bad commit)

Will fix the issues per commit to see who is the actual source of the issue.
fb3b2ab709 Seems to be the issue. It removed the function DRW_cache_mesh_sculpt_coords_ensure and the call to it. Will need to check with @fclem what would be the correct solution to move forward.

One of the next commits is the source of the issue. b2f1a65874 (Skipped due to compile error) fb3b2ab709 (Skipped due to compile error) f302224e16 (First compilable bad commit) Will fix the issues per commit to see who is the actual source of the issue. fb3b2ab709 Seems to be the issue. It removed the function `DRW_cache_mesh_sculpt_coords_ensure` and the call to it. Will need to check with @fclem what would be the correct solution to move forward.
Member

@fclem solution to move forward is:

if you want to fix this do it in drw_sculpt_generate_calls to avoid duplication. I think its a matter of porting what sculpt_update_pbvh_normals was doing

@fclem solution to move forward is: > if you want to fix this do it in drw_sculpt_generate_calls to avoid duplication. I think its a matter of porting what sculpt_update_pbvh_normals was doing

Yay!! :D

Yay!! :D

Added subscriber: @Jakuba

Added subscriber: @Jakuba

This issue was referenced by f87bba0368

This issue was referenced by f87bba0368ea3d0b71559cfae662ae9e3b39ad6f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

YESS!! YESS!! , it works!!

[YESS!! YESS!! ](https://www.youtube.com/watch?v=IuBQkdsajVE), it works!!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
13 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62282
No description provided.